# ObjectDatasetTools_cpp

./: .gitignore  CMakeLists.txt  README.md
config/: algorithm_params.json  scanner0_params.json
include/odt/: air_record_scanner.hpp  camera_utils.hpp  cli.hpp  npy_io.hpp  npy_save.hpp  object_dataset_tools.hpp  odt_registration.hpp  pose_visualization.hpp  register_scene_fusion.hpp  registration_params.hpp
include/odt/io/: npy_io.hpp
include/odt/registration/: odt_registration.hpp  pose_visualization.hpp  register_scene_fusion.hpp  registration_params.hpp
include/odt/utils/: air_capture_helpers.hpp  air_record_scanner.hpp  async_progress.hpp  label_projection.hpp  linemod_dataset.hpp  register_scene_manifest.hpp
src/: air_record_scanner.cpp  async_progress.cpp  camera_utils.cpp  compute_gt_poses.cpp  create_label_files.cpp  get_mesh_scale.cpp  odt_registration.cpp  pose_visualization.cpp  record_air.cpp  register_scene.cpp  register_scene_fusion.cpp
src/registration/: odt_registration.cpp  pose_visualization.cpp  register_scene_fusion.cpp  registration_params.cpp
src/utils/: air_capture_helpers.cpp  air_record_scanner.cpp  async_progress.cpp  camera_utils.cpp  linemod_dataset.cpp
test/: main.cpp
